# md-corpus

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
md_corpus/: __init__.py  cli.py  exceptions.py
md_corpus/providers/: __init__.py  aliyun.py  aws.py  base.py
tests/: conftest.py  test_cli.py  test_core.py  test_providers.py
tests/data/: convert_test.md  edge_cases.md  format_test.md  test1.md  test2.md
tests/data/level1/level2/level3/: test.md
tests/data/subdir/: test2.md
